--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,3 +1,7 @@
+// Import CoreUI styles
+@import "~@coreui/coreui/scss/coreui.scss";
+
+
 .App {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
